Refactor. Removed technical debt.